--- a/umdesk.html
+++ b/umdesk.html
@@ -354,7 +354,7 @@ img {
 <ul>
 <li>- Indoor
 </li>
-<li>- +10 to +30 °C operational temperature</li>
+<li>- +10 to +30 C operational temperature</li>
 </ul>
 <h5>RF Input/Output</h5>
 <ul>
@@ -502,7 +502,7 @@ img {
 <pre><code>Shell&gt; sudo nano /etc/network/interfaces
 </code></pre>
 
-<p>Refer to Ubuntu documentation <a href="www.help.ubuntu.com/14.04/serverguide/network-configuration.html">UBUNTU</a> for details
+<p>Refer to <a href="www.help.ubuntu.com/14.04/serverguide/network-configuration.html">Ubuntu</a> documentation for details
 </p>
 
 </body>
