--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 					
 					<a href="faq.html" class="faq">FAQ</a>
 
+                    <a href="how_to's.html" class="how_to's">How to</a>
+
 					
 					</div>
 					<div class="logo">
