--- a/how_to's.html
+++ b/how_to's.html
@@ -14,7 +14,7 @@
 					
 					<a href="faq.html" class="faq">FAQ</a>
 
-                    <a href="how_to's.html" class="how_to's">How to</a> 
+                    <a href="how_to's.html" class="how_to's">How to</a>
 					
 					</div>
 					<div class="logo">
@@ -31,7 +31,7 @@
 	
       <div class="span3">
           <ul class="nav nav-list">
-		<a href="#1. Stable branch release set for UmTRX">1. Stable branch release set for UmTRX</a>
+		<a href="#1. Branch release set for UmTRX">1. Branch release set for UmTRX</a>
 		<a href="#2. UHD installation">2. UHD installation</a>
 		<a href="#3. UmTRX firmware">3. UmTRX firmware</a>
 		<a href="#4. Osmo-TRX rebuild (optional)"> 4. Osmo-TRX rebuild (optional)</a>
@@ -331,7 +331,7 @@ img {
 <h4><center>How to's</center></h4>
 <br><br>
 
-<a name="1. Stable branch release set for UmTRX"></a><h4>1. Stable branch release set for UmTRX<a class="anchorlink" href="#1. Stable branch release set for UmTRX"></a></h4>
+<a name="1. Branch release set for UmTRX"></a><h4>1. Branch release set for UmTRX<a class="anchorlink" href="#1. Branch release set for UmTRX"></a></h4>
 <h4></h4>
 
 
