--- a/umdesk.html
+++ b/umdesk.html
@@ -35,7 +35,7 @@
 		<a href="#1.1Mechanical specification">1.1 Mechanical specification</a>
 		<a href="#1.2 Software specification">1.2 Software specification</a>
 		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
-		<a href="#1.4 Software variant"> 1.4 Software options</a>
+		<a href="#1.4 Software options"> 1.4 Software options</a>
 		<h4><a href="#2 Installation">2. Installation</a></h4>
 		<a href="#2.1 Device preparation">2.1 Device preparation</a>
 		<a href="#2.2 Log in">2.2 Log in</a></li>
@@ -346,142 +346,157 @@ img {
 <p><img src="http://s019.radikal.ru/i608/1409/60/3a29878257fd.png" /></p>
 <p>The UmDESK is an IP-backhaul GSM Network In The Box shaped in mini-ITX case which has ability to work separately as BTS and BSC. As NITB it includes BSC, MSC, HLR, VLR and SMSC core network components.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
-<h5>Enclosure</h5>
+<br><br>
+<h4>Enclosure</h4>
 <ul>
-<li>- Dimensions: 130 x 220 x 330 mm</li>
-<li>- Weight: 3.8 kg</li>
+<li>&#8226 Dimensions: 130 x 220 x 330 mm</li>
+<li>&#8226 Weight: 3.8 kg</li>
 </ul>
-<h5>Environmental conditions</h5>
+<h4>Environmental conditions</h4>
 <ul>
-<li>- Indoor
+<li>&#8226 Indoor
 </li>
-<li>- +10 to +30 °C operational temperature</li>
+<li>&#8226 +10 to +30 °C operational temperature</li>
 </ul>
-<h5>RF Input/Output</h5>
+<h4>RF Input/Output</h4>
 <ul>
-<li>- GSM 850/900/1800/1900
+<li>&#8226 GSM 850/900/1800/1900
 </li>
-<li>- 2 independent TRX
+<li>&#8226 2 independent TRX
 </li>
-<li>- Diversity receive
+<li>&#8226 Diversity receive
 </li>
-<li>- Multi-ARFCN on each TRX (beta)
+<li>&#8226 Multi-ARFCN on each TRX (beta)
 </li>
-<li>- Max output power per TRX: 100mW (850/900 bands), 50mW (1800/1900 bands)
+<li>&#8226 Max output power per TRX: 100mW (850/900 bands), 50mW (1800/1900 bands)
 </li>
-<li>- 1W per channel (2x1W) with external boosters
-</li>
-</ul>
-<h5>Reference Clock</h5>
-<ul>
-<li>- GPS (default)
-</li>
-<li>- OCXO (optional)
+<li>&#8226 1W per channel (2x1W) with external boosters
 </li>
 </ul>
-<h5>CPU</h5>
+<h4>Reference Clock</h4>
 <ul>
-<li>- Intel Atom</li>
-</ul>
-<h5>Input Voltage and Power</h5>
-<ul>
-<li>- 110-220 VAC
+<li>&#8226 GPS (default)
 </li>
-<li>- Power consumption: less than 80W</li>
-</ul>
-<h5>Backhaul Interface</h5>
-<ul>
-<li>- RJ45 Ethernet (100/1000Mbit)
+<li>&#8226 OCXO (optional)
 </li>
 </ul>
-<h5>Antenna</h5>
+<h4>CPU</h4>
 <ul>
-<li>- 850/900/1800/1900 GSM frequency band compatible.</li>
+<li>&#8226 Intel Atom</li>
+</ul>
+<h4>Input Voltage and Power</h4>
+<ul>
+<li>&#8226 110-220 VAC
+</li>
+<li>&#8226 Power consumption: less than 80W</li>
+</ul>
+<h4>Backhaul Interface</h4>
+<ul>
+<li>&#8226 RJ45 Ethernet (100/1000Mbit)
+</li>
+</ul>
+<h4>Antenna</h4>
+<ul>
+<li>&#8226 850/900/1800/1900 GSM frequency band compatible.</li>
 </ul>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
-<h5>Number of Transceivers</h5>
+<br><br>
+<h4>Number of Transceivers</h4>
 <ul>
-<li>- 2 TRX / 16 timeslots</li>
+<li>&#8226 2 TRX / 16 timeslots</li>
 </ul>
-<h5>Supported timeslot configurations</h5>
+<h4>Supported timeslot configurations</h4>
 <ul>
-<li>- CCCH, CCCH+SDCCH/4, SDCCH/8, TCH/F, TCH/H</li>
+<li>&#8226 CCCH, CCCH+SDCCH/4, SDCCH/8, TCH/F, TCH/H</li>
 </ul>
-<h5>Voice codecs</h5>
+<h4>Voice codecs</h4>
 <ul>
-<li>- FR/HR/EFR/AMR; RTP stream</li>
+<li>&#8226 FR/HR/EFR/AMR; RTP stream</li>
 </ul>
-<h5>Ciphering</h5>
+<h4>Ciphering</h4>
 <ul>
-<li>- A5/0, A5/1, A5/2 and A5/3</li>
+<li>&#8226 A5/0, A5/1, A5/2 and A5/3</li>
 </ul>
-<h5>GPRS/EDGE</h5>
+<h4>GPRS/EDGE</h4>
 <ul>
-<li>- GPRS - beta</li>
-<li>- EDGE - planned</li>
+<li>&#8226 GPRS - beta</li>
+<li>&#8226 EDGE - planned</li>
 </ul>
-<h5>Operating System</h5>
-<p>Embedded Linux</p>
-<h5>Capacity</h5>
+<h4>Operating System</h4>
+<p> &#8226Embedded Linux</p>
+<h4>Capacity</h4>
 <ul>
-<li>- maximum concurrent calls (Full/Half) Rate 15/30</li>
-<li>- maximum simultaneous SMS 124 (15<em>SDCCH/8 + 1</em>SDCCH/4)</li>
+<li>&#8226 maximum concurrent calls (Full/Half) Rate 15/30</li>
+<li>&#8226 maximum simultaneous SMS 124 (15<em>SDCCH/8 + 1</em>SDCCH/4)</li>
 </ul>
 <h4><a name="1.3 Hardware options"></a>1.3 Hardware options<a class="anchorlink" href="#1.3 Hardware options"></a></h4>
 <ul>
-<li>- Internal duplexer</li>
-<li>- External cavity duplexer</li>
-<li>- External 1W booster</li>
-<li>- Clocking: OCXO / GPS disciplined</li>
+<li>&#8226 Internal duplexer</li>
+<li>&#8226 External cavity duplexer</li>
+<li>&#8226 External 1W booster</li>
+<li>&#8226 Clocking: OCXO / GPS disciplined</li>
 </ul>
-<h4><a name="1.4 Software options"></a>1.4 Software variant<a class="anchorlink" href="#1.4 Software variant"></a></h4>
+<h4><a name="1.4 Software options"></a>1.4 Software variant<a class="anchorlink" href="#1.4 Software options"></a></h4>
 <ul>
-<li>- BTS-only (variant of connection of the BTS to an external BSC)</li>
+<li>&#8226 BTS-only (variant of connection of the BTS to an external BSC)</li>
 </ul>
 <p><img src="http://s020.radikal.ru/i722/1409/54/841d04fe7f23.png" /></p>
 <ul>
-<li>- BSC  (BTS run as an internal instance of OpenBSC)</li>
+<li>&#8226 BSC  (BTS run as an internal instance of OpenBSC)</li>
 </ul>
 <p><img src="http://s013.radikal.ru/i323/1409/b0/18794da5f2b1.png" /></p>
 <ul>
-<li>- NITB (Fully autonomous GSM PBX with VoIP gateway (SIP interface))</li>
+<li>&#8226 NITB (Fully autonomous GSM PBX with VoIP gateway (SIP interface))</li>
 </ul>
 <p><img src="http://i068.radikal.ru/1409/01/5150385cd640.png" /></p>
 <p>The difference between those variants is only in the installed and configured software packages on the Linux based OS.  
 </p>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
+<br>
 <h4><a name="2.1 Device preparation"></a>2.1 Device preparation<a class="anchorlink" href="#2.1	Device preparation"></a></h4>
 <ol>
 <li>
 <p>Unwrap UmDESK. Devices comes already installed, which means you only need to attach the antenna, connect to power source and turn it on. </p>
 </li>
 <li>
-<p>- Check the LEDs on the front panel (Tx1 Rx1 Tx2 Rx2) if it lights, UmDESK works properly </p>
+<p>&#8226 Check the LEDs on the front panel (Tx1 Rx1 Tx2 Rx2) if it lights, UmDESK works properly </p>
 </li>
 <li>
-<p>- Make sure the Ethernet cable connects UmTRX with UmDESK motherboard (as opposed to external Ethernet PCI card which is on the right corner of the back side panel UmDesk)</p>
+<p>&#8226 Make sure the Ethernet cable connects UmTRX with UmDESK motherboard (as opposed to external Ethernet PCI card which is on the right corner of the back side panel UmDesk)</p>
 </li>
 <li>
-<p>- Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
+<p>&#8226 Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
 </li>
 </ol>
 <h5>Here are a couple features you should try to make sure that everything works properly:</h5>
 <ul>
 <li>
-<p>- Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
+<p>&#8226 Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
 </li>
 <li>
-<p>- Dial *#100# to figure the number that was assigned to your phone.
+<p>&#8226 Dial *#100# to figure the number that was assigned to your phone.
 </p>
 </li>
 <li>
-<p>- Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
+<p>&#8226 Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
 </p>
 </li>
 </ul>
 <h4><a name="2.2 Log in"></a>2.2 Log in<a class="anchorlink" href="#2.2	Log in"></a></h4>
 <p>In order to configure and administer the UmDESK, you have to attach monitor, keyboard, mouse or login into device remotely over SSH. External Ethernet card is configured to get IP address via DHCP, and has a fixed <strong>192.168.50.100</strong>.  
 </p>
+<hr />
+<h6>Note:</h6>
+<p>Small inch monitors might have a displaying problem with console mode resolution. </p>
+<p>just add</p>
+<pre><code>blacklist gma500_gfx
+</code></pre>
+
+<p>line to</p>
+<p><em>/etc/modprobe.d/blacklist-framebuffer.conf</em></p>
+<p>in order to disable Linux Kernel Framebuffer for this graphics driver. </p>
+<hr />
+
 <p>Connect laptop to the UmDESK via Ethernet cable.</p>
 <h6>Note:</h6>
 <p>Before startng to work with the device, set up IP address on laptop like this <strong>192.168.50.200</strong>  
