--- a/umsite.html
+++ b/umsite.html
@@ -1,4 +1,4 @@
-<html class="global desktop"><head><meta name="viewport" content="user-scalable=yes,width=device-width,initial-scale=1"><style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{-webkit-text-size-adjust:none}</style><style type="text/css">*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}</style><meta name="viewport" content="initial-scale=1">
+<html class="global desktop"><head><meta name="viewport" content="user-scalable=yes,width=device-width,initial-scale=1"><style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h4,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{-webkit-text-size-adjust:none}</style><style type="text/css">*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}</style><meta name="viewport" content="initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="global.css">
 <title>Fairwaves</title>
@@ -14,7 +14,7 @@
 					
 					<a href="faq.html" class="faq">FAQ</a>
 
-                    <a href="how_to's.html" class="how_to's">How to</a> 
+                    <a href="how_to's.html" class="how_to's">How to</a>
 					
 					</div>
 					<div class="logo">
@@ -49,7 +49,7 @@
 
 =============================================================================*/
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h4, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -86,14 +86,14 @@ p, blockquote, ul, ol, dl, table, pre {
 /* HEADERS
 =============================================================================*/
 ?
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h4, h6 {
   margin: 20px 0 10px;
   padding: 0;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
 }
 
-h1 tt, h1 code, h2 tt, h2 code, h3 tt, h3 code, h4 tt, h4 code, h5 tt, h5 code, h6 tt, h6 code {
+h1 tt, h1 code, h2 tt, h2 code, h3 tt, h3 code, h4 tt, h4 code, h4 tt, h4 code, h6 tt, h6 code {
   font-size: inherit;
 }
 
@@ -116,7 +116,7 @@ h4 {
   font-size: 16px;
 }
 
-h5 {
+h4 {
   font-size: 14px;
 }
 
@@ -125,17 +125,17 @@ h6 {
   font-size: 14px;
 }
 
-body>h2:first-child, body>h1:first-child, body>h1:first-child+h2, body>h3:first-child, body>h4:first-child, body>h5:first-child, body>h6:first-child {
+body>h2:first-child, body>h1:first-child, body>h1:first-child+h2, body>h3:first-child, body>h4:first-child, body>h4:first-child, body>h6:first-child {
   margin-top: 0;
   padding-top: 0;
 }
 
-a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
+a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h4, a:first-child h6 {
   margin-top: 0;
   padding-top: 0;
 }
 
-h1+p, h2+p, h3+p, h4+p, h5+p, h6+p {
+h1+p, h2+p, h3+p, h4+p, h4+p, h6+p {
   margin-top: 10px;
 }
 
@@ -345,115 +345,118 @@ img {
 <p><img src="http://i074.radikal.ru/1501/99/211623961215.jpg" /></p>
 <p>The UmSITE is an IP-backhaul GSM BTS, BSC and Network In The Box.  This is tower-mounted, fault-tolerant and completely protected from any weather conditions solution, which is used for wide range network.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
-<h5>Enclosure</h5>
+<br>
+<h4>Enclosure</h4>
 <ul>
-<li>- Dimensions: 465 x 190 x 170 mm
+<li>&#8226 Dimensions: 465 x 190 x 170 mm
 </li>
-<li>- Weight: less than 15 kg
+<li>&#8226 Weight: less than 15 kg
 </li>
 </ul>
-<h5>Environmental conditions</h5>
+<h4>Environmental conditions</h4>
 <ul>
 <li>Outdoor</li>
-<li>-30 °C to +45 °C operational temperature</li>
+<li>&#8226 -30 C to +45 C operational temperature</li>
 </ul>
-<h5>RF Input/Output</h5>
+<h4>RF Input/Output</h4>
 <ul>
-<li>- GSM 850/900/1800/1900 band  (chosen at order time)
+<li>&#8226 GSM 850/900/1800/1900 band  (chosen at order time)
 </li>
-<li>- 2 independent TRX
+<li>&#8226 2 independent TRX
 </li>
-<li>- Diversity receive
+<li>&#8226 Diversity receive
 </li>
-<li>- Multi-ARFCN on each TRX (beta)
+<li>&#8226 Multi-ARFCN on each TRX (beta)
 </li>
-<li>- 10W per channel (2x10W)</li>
+<li>&#8226 10W per channel (2x10W)</li>
 </ul>
-<h5>Reference Clock</h5>
+<h4>Reference Clock</h4>
 <ul>
-<li>- GPS (default)
+<li>&#8226 GPS (default)
 </li>
-<li>- OCXO (optional)
+<li>&#8226 OCXO (optional)
 </li>
 </ul>
-<h5>CPU</h5>
+<h4>CPU</h4>
 <ul>
-<li>- Intel Atom
+<li>&#8226 Intel Atom
 </li>
 </ul>
-<h5>Input Voltage and Power</h5>
+<h4>Input Voltage and Power</h4>
 <ul>
-<li>- 220 VAC
+<li>&#8226 220 VAC
 </li>
-<li>- Power consumption: less than 100W
+<li>&#8226 Power consumption: less than 100W
 </li>
 </ul>
-<h5>Backhaul Interface</h5>
+<h4>Backhaul Interface</h4>
 <ul>
-<li>- RJ45 Ethernet (100/1000Mbit)
+<li>&#8226 RJ45 Ethernet (100/1000Mbit)
 </li>
 </ul>
-<h5>Power supply</h5>
-<p>Fairwaves doesn’t provide the power supply. This is because, different places use different power sources. Fairwaves products compatible with any power sources including solar panels as well.	 </p>
-<h5>Antenna</h5>
-<p>Faiwaves doesn’t provide an antenna. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band.</p>
+<h4>Power supply</h4>
+<p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products compatible with any power sources including solar panels as well.	 </p>
+<h4>Antenna</h4>
+<p>Faiwaves does not provide an antenna. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band.</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
-<h5>Number of Transceivers</h5>
+<br>
+<h4>Number of Transceivers</h4>
 <ul>
-<li>- 2 TRX / 16 timeslots</li>
+<li>&#8226 2 TRX / 16 timeslots</li>
 </ul>
-<h5>Supported timeslot configurations</h5>
+<h4>Supported timeslot configurations</h4>
 <ul>
-<li>- CCCH, CCCH+SDCCH/4, SDCCH/8, TCH/F, TCH/H</li>
+<li>&#8226 CCCH, CCCH+SDCCH/4, SDCCH/8, TCH/F, TCH/H</li>
 </ul>
-<h5>Voice codecs</h5>
+<h4>Voice codecs</h4>
 <ul>
-<li>- FR/HR/EFR/AMR; RTP stream</li>
+<li>&#8226 FR/HR/EFR/AMR; RTP stream</li>
 </ul>
-<h5>Ciphering</h5>
+<h4>Ciphering</h4>
 <ul>
-<li>- A5/0, A5/1, A5/2 and A5/3</li>
+<li>&#8226 A5/0, A5/1, A5/2 and A5/3</li>
 </ul>
-<h5>GPRS/EDGE</h5>
+<h4>GPRS/EDGE</h4>
 <ul>
-<li>- GPRS - beta</li>
-<li>- EDGE - planned</li>
+<li>&#8226 GPRS - beta</li>
+<li>&#8226 EDGE - planned</li>
 </ul>
-<h5>Operating System</h5>
+<h4>Operating System</h4>
 <p>Embedded Linux</p>
-<h5>Capacity</h5>
+<h4>Capacity</h4>
 <ul>
-<li>- maximum concurrent calls (Full/Half) Rate 15/30</li>
-<li>- maximum simultaneous SMS 124 (15<em>SDCCH/8 + 1</em>SDCCH/4)</li>
+<li>&#8226 maximum concurrent calls (Full/Half) Rate 15/30</li>
+<li>&#8226 maximum simultaneous SMS 124 (15<em>SDCCH/8 + 1</em>SDCCH/4)</li>
 </ul>
 <h4><a name="1.3 Hardware options"></a>1.3 Hardware options<a class="anchorlink" href="#1.3 Hardware options"></a></h4>
 <ul>
-<li>- Clocking: OCXO / GPS disciplined</li>
+<li>&#8226 Clocking: OCXO / GPS disciplined</li>
 </ul>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
+<br>
 <h4><a name="2.1 Device preparation"></a>2.1 Device preparation<a class="anchorlink" href="#2.1	Device preparation"></a></h4>
 <ol>
 <li>
-<p>- Unwrap UmSITE. Devices comes already installed, which means you only need to attach the antenna, connect to power source and turn it on. LED on the front pannel will flashing in 1-2 minutes after turned on.</p>
+<p>&#8226 Unwrap UmSITE. Devices comes already installed, which means you only need to attach the antenna, connect to power source and turn it on. LED on the front pannel will flashing in 1-2 minutes after turned on.</p>
 </li>
 <li>
-<p>- Make sure that Ethernet cable connected.</p>
+<p>&#8226 Make sure that Ethernet cable connected.</p>
 </li>
 <li>
-<p>- Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
+<p>&#8226 Now you can check if it works properly, take any GSM phone with any SIM card and try to connect to a new network. To search for your network go to setting / networks on your phone and choose one which is could have different names like <em>Fairwaves, 1 01, Test, etc</em>.</p>
 </li>
 </ol>
-<h5>Here are a couple features you should try to make sure that everything works properly:</h5>
+<h4>Here are a couple features you should try to make sure that everything works properly:</h4>
 <ul>
 <li>
-<p>- Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
+<p>&#8226 Dial test numbers to check the voice service: 1001 to listen to some music, 1002 to listen to yourself (echo). </p>
 </li>
 <li>
-<p>- Dial *#100# to figure the number that was assigned to your phone.
+<p>&#8226 Dial *#100# to figure the number that was assigned to your phone.
 </p>
 </li>
 <li>
-<p>- Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
+<p>&#8226 Connect another phone in the same manner and check if you can initiate calls and messages between the two phones.
 </p>
 </li>
 </ul>
@@ -474,17 +477,17 @@ img {
 </ol>
 <p>Once you have logged into the system, you will be at a Linux shell command prompt. </p>
 <p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
-<h5>Login over Serial cable</h5>
+<h4>Login over Serial cable</h4>
 <p>Serial connection gives you ability to look over the system on the loading level of operation system if something went wrong. </p>
 <p>You'll get options like:</p>
 <ol>
 <li>1. Advanced options for Ubuntu</li>
 <li>2. Test RAM memory</li>
 </ol>
-<p><img src="http://s017.radikal.ru/i418/1411/b5/481e691fe959.jpg" /></p>
+<p><img src="http://s017.radikal.ru/i443/1503/23/6b5a8596dac4.jpg" /></p>
 <p>First of all you have to use <strong>USB Serial Adapter</strong> for the connection (which is not comes with the UmSITE).</p>
 <p>For the Windows user use <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
-<p><img src="http://s017.radikal.ru/i444/1411/42/4f52616f16e4.jpg" /></p>
+<p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
 <p>Number of the COM port you will be able to find it in the  <strong>Desktop manager</strong> when you are connecting to the laptop. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 <p>Run this command to connect via serial cabel:</p>
