--- a/soft_conf.html
+++ b/soft_conf.html
@@ -16,7 +16,7 @@
 					
 					<a href="faq.html" class="faq">FAQ</a>
 
-                    <a href="how_to's.html" class="how_to's">How to</a> 
+                    <a href="how_to's.html" class="how_to's">How to</a>
 
 					
 					</div>
@@ -418,6 +418,14 @@ img {
 <h5>VTY</h5>
 <pre><code>        Virtual Teletype
 </code></pre>
+
+<h5>ISDN</h5>
+<pre><code>        Integrated Services Digital Network
+</code></pre>
+
+<h5>PSTN</h5>
+<pre><code>        Public Switched Telephone Network
+</code></pre>
 <br>
 <br>
 <br>
@@ -430,7 +438,7 @@ img {
 <p>A GSM network is made up of multiple components and interfaces that facilitate sending and receiving of signaling and traffic messages. It is
 a collection of transceivers, controllers, switches, routers, and registers.
 The GSM network can be divided into following parts.</p>
-<p><img src="http://s014.radikal.ru/i327/1501/5c/fc089f02e69c.png" /></p>
+<p><img src="http://s47.radikal.ru/i117/1503/82/cd1fa45d5acc.png" /></p>
 <h4>Mobile Station (MS)</h4>
 <p>is made up of two components:</p>
 <ul>
@@ -501,7 +509,7 @@ More information about specification, protocol stack, security and etc, you can 
 <p>UmCORE is available in customer co-located and cloud versions.</p>
  <br>
 <a name="2.Configuration"></a><h4>2. Configuration<a class="anchorlink" href="#2.Configuration"></a></h4>
-
+ <br>
 <h4>2.1	Log in</h4>
 <p>There are two physical ethernet interfaces for the <b>UmDESK</b>, which is have a static IP for the external ethernet card <strong>192.168.50.100</strong> also it's configured to get IP address via DHCP and <strong>192.168.10.10</strong> is internal interface for the UmTRX. In order to configure <strong>UmSITE</strong>, you have to login into device remotely over SSH. Ethernet card has a fixed IP <strong>192.168.50.100</strong> as well as through the DHCP .
 </p>
@@ -528,7 +536,7 @@ Before startng to work with the device, set up IP address on laptop like this <s
 </ol>
 <p>First of all you have to use <strong>USB Serial Adapter</strong> for the connection (which is not comes with the UmSITE).</p>
 <p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
-<p><img src="http://s017.radikal.ru/i444/1411/42/4f52616f16e4.jpg" /></p>
+<p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
 <p>Number of the COM port you will be able to find it in the  <strong>Desktop manager</strong> when you are connecting to the laptop. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 <p>Run this command to connect via serial cabel:</p>
