--- a/umdesk.html
+++ b/umdesk.html
@@ -356,7 +356,7 @@ img {
 <ul>
 <li>&#8226 Indoor
 </li>
-<li>&#8226 +10 to +30 °C operational temperature</li>
+<li>&#8226 +10 to +30 C operational temperature</li>
 </ul>
 <h4>RF Input/Output</h4>
 <ul>
@@ -423,7 +423,7 @@ img {
 <li>&#8226 EDGE - planned</li>
 </ul>
 <h4>Operating System</h4>
-<p> &#8226Embedded Linux</p>
+<p>Embedded Linux</p>
 <h4>Capacity</h4>
 <ul>
 <li>&#8226 maximum concurrent calls (Full/Half) Rate 15/30</li>
