--- a/faq.html
+++ b/faq.html
@@ -75,7 +75,7 @@
 						  <h2 class="faq">Do you have a specific simcards or usual simcards can be used?
 
 </h2>
-						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However it’s impossible to provide subscriber authentication and traffic encryption if you don’t know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication,you can set up only open network either get SIM-cards with known Ki keys to set up close network. You can buy a SIM-cards and program them.</p></center>
+						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However it is impossible to provide subscriber authentication and traffic encryption if you do not know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication,you can set up only open network either get SIM-cards with known Ki keys to set up close network. You can buy a SIM-cards and program them.</p></center>
 
 
 
@@ -112,7 +112,7 @@
 						  <h2 class="faq">How do you handle SMS and GPRS in your systems?
 
 </h2>
-						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS also Fairwaves provide GPRS, in terms of quality it disabled in production systems to get more capacity for the voice and SMS either that’s too slow to use it as data service. We considering to use WiFi instead of GPRS.
+						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS also Fairwaves provide GPRS, in terms of quality it disabled in production systems to get more capacity for the voice and SMS either that is too slow to use it as data service. We considering to use WiFi instead of GPRS.
 </center></p>
 
                         </div>
@@ -203,7 +203,7 @@
 						  <h2 class="faq"> Is it possible to connect external BTS to the network through A-bis interface?
 
 </h2>
-						  <center><p>We don’t support external BTS connection through A-bis interface, because of this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no a simple ways of backhaul optimization, that brings an extra expenses for the village connection through the VSAT.</p></center>
+						  <center><p>We do not support external BTS connection through A-bis interface, because of this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no a simple ways of backhaul optimization, that brings an extra expenses for the village connection through the VSAT.</p></center>
 
 
 
