--- a/soft_conf.html
+++ b/soft_conf.html
@@ -1052,7 +1052,7 @@ codec,iLBC,mod_ilbc
 <p>3. Semi- automatically from the Virtual Tele Type (VTY)</p>
 </li>
 </ol>
-<p>Subscribers are stored in /etc/osmocom/hlr.sqlite3, which is an SQLite database file. You are able to view or change the database with sqlite3 command.The easiest way to add, assign, and change subscriber’s properties is semi-automatically through VTY.</p>
+<p>Subscribers are stored in /etc/osmocom/hlr.sqlite3, which is an SQLite database file. You are able to view or change the database with sqlite3 command.The easiest way to add, assign, and change subscriber properties is semi-automatically through VTY.</p>
 <b>Create the subscriber IMSI 9875648374658</b>
 <pre><code>    OpenBSC# subscriber create imsi 9875648374658
 </code></pre>
